# servant-snap-sideload

./: README.md  servant-snap-sideload.cabal  stack.yaml
src/Servant/Server/: Sideloaded.hs
test/Servant/Server/: SideloadedSpec.hs
