name:                servant-snap-sideload
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/servant-snap-sideload#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.Server.Sideloaded
  build-depends:       base >= 4.7 && < 5
                     , servant-aeson-versioned
                     , servant
                     , servant-snap
                     , aeson
                     , aeson-versioned
                     , aeson-versioned-sideloading
                     , http-types
                     , snap-core
                     , transformers
                     , singletons
  default-language:    Haskell2010

test-suite servant-snap-sideload-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-snap-sideload
                     , hspec
                     , HUnit
                     , aeson
                     , bytestring
                     , aeson-versioned
                     , aeson-versioned-sideloading
                     , http-types
                     , servant
                     , servant-aeson-versioned
                     , servant-snap
                     , snap
                     , snap-core
                     , tagged
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/servant-snap-sideload
